# Darwin

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: development.yaml  live.example.yaml  paper.yaml
config/strategies/: momentum.yaml
docs/: accounting.md  architecture.md  backtesting.md  data_model.md  exchange_integration.md  execution_simulation.md  final_verification.md  implementation_gap_analysis.md  implementation_plan.md  kalshi_live_validation_gap_analysis.md  live_paper_gap_analysis.md  live_paper_trading.md  live_trading_checklist.md  operations.md  recovery.md  risk.md  strategy.md  testing.md
scripts/: bootstrap.py  collect_data.py  download_markets.py  run_backtest.py  run_paper_trader.py  run_walk_forward.py
src/darwin/: __init__.py  cli.py  clock.py  config.py  constants.py  logging.py
tests/fixtures/: kalshi_ws_session.jsonl
tests/integration/: test_backtest_outputs.py  test_live_paper_smoke.py  test_mock_cli_collect.py  test_paper_live_dry_run.py  test_vertical_cli.py
tests/live/: test_kalshi_live_opt_in.py  test_mock_stability.py
tests/property/: test_invariants.py
tests/replay/: multi_market_session.jsonl  sample.jsonl
tests/unit/: test_accounting_expanded.py  test_domain.py  test_equity_accounting_live.py  test_event_bus_and_health.py  test_execution_config.py  test_features_incremental.py  test_features_strategy_risk.py  test_fill_model_expanded.py  test_kalshi_mapping.py  (+13 more)
(+89 files in other folders)
