[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "darwin-pm"
version = "0.1.0"
description = "Safety-first prediction-market research and trading platform."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "alembic>=1.13",
  "cryptography>=42",
  "fastapi>=0.111",
  "httpx>=0.27",
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.22",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "sqlalchemy>=2.0",
  "streamlit>=1.36",
  "structlog>=24.1",
  "typer>=0.12",
  "websockets>=12",
]

[project.optional-dependencies]
dev = ["hypothesis>=6.100", "mypy>=1.10", "pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.5", "pre-commit>=3.7"]
postgres = ["psycopg[binary]>=3.2"]

[project.scripts]
darwin = "darwin.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/darwin"]

[tool.hatch.build.targets.wheel.force-include]
"src/darwin/py.typed" = "darwin/py.typed"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
files = ["src/darwin"]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pandas.*", "sklearn.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
